Шаблоны и наследование подключил на /base

--- a/folklore_base/apps/base/templates/base/base.html
+++ b/folklore_base/apps/base/templates/base/base.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <title></title>
+    <title>{% block title %}
+        Банк данных фольлорно-этнографических записей
+    {% endblock %}</title>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -35,6 +37,9 @@
     </ul>
   </div>
 </nav>
+{% block content %}
 
+    Здесь нет контента
+{% endblock %}
 </body>
 </html>
