Добавлен предпросмотр фотографии исполнителя в админке

--- a/folklore_base/apps/base/templates/expeditions.html
+++ b/folklore_base/apps/base/templates/expeditions.html
@@ -7,7 +7,7 @@
 {% block content %}
 <h3>Список экспедиций</h3> <hr>
 <div class="container">
-  <div class="row">
+    <div class="card-columns">
     {% for exp in object_list %}
     <div class="col-sm">
       <div class="card mb-1" style="width: 18rem;">
