Небольшие правки дизайна и начало работы поиска по исполнителям

--- a/folklore_base/apps/base/templates/expeditions.html
+++ b/folklore_base/apps/base/templates/expeditions.html
@@ -5,7 +5,7 @@
 {% endblock%}
 
 {% block content %}
-<h3>Список экспедиций</h3> <hr>
+<br><h3 class="text-center text-muted">Список экспедиций</h3> <hr>
 <div class="container">
     <div class="card-columns">
     {% for exp in object_list %}
