--- a/folklore_base/apps/base/templates/base.html
+++ b/folklore_base/apps/base/templates/base.html
@@ -13,6 +13,8 @@
 
 </head>
 <body>
+  <br><h2 class="text-center">Банк данных экспедиционных записей</h2>
+  <br>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="{% url 'expeditions' %}">Экспедиции</a>
@@ -25,7 +27,7 @@
             <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Записи</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Исполнители</a>
+            <a class="nav-link" href="{% url 'informants' %}">Исполнители</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Новости</a>
