--- a/folklore_base/apps/base/templates/seances.html
+++ b/folklore_base/apps/base/templates/seances.html
@@ -4,7 +4,7 @@
 Экспедиция {{ object.name_organisation }} {{ object.begin_data_expedition }}
 {% endblock %}
 {% block content %}
-<h4>Сеансы записи экспедиции {{ object.name_organisation }} {{ object.begin_data_expedition }}</h4><hr>
+<br><h4 class="text-center text-muted" >Сеансы записи экспедиции {{ object.name_organisation }} {{ object.begin_data_expedition }}</h4><hr>
 <div class="container">
   <div class="row m-1" >
     {% for seance in object.seanses_of_expedition.all %}
