Правки дизайна раздела Экспедиции и Сеансы записи

--- a/folklore_base/apps/base/templates/expeditions.html
+++ b/folklore_base/apps/base/templates/expeditions.html
@@ -6,27 +6,24 @@
 
 {% block content %}
 <br><h3 class="text-center text-muted">Список экспедиций</h3> <hr>
-<div class="container">
-    <div class="card-columns">
-    {% for exp in object_list %}
-    <div class="col-sm">
-      <div class="card mb-1" style="width: 18rem;">
-        <div class="card-header">
-          {{ exp.organisation_expedition }} {{ exp.begin_data_expedition }}
-        </div>
-        <div class="card-body">
-          руководитель: <i>{{ exp.researcher_expedtion }}</i>
-          <p class="card-text">
-            {% for seance in exp.seanses_of_expedition.all %}
-            <li>{{ seance.place_of_record }} <br>
-              {% endfor %}</p>
-              <a href='{% url "seances" exp.pk %}' class="btn btn-secondary">Подробнее</a>
-            </div>
-          </div>
-        </div>
-
-
-        {% endfor %}
-      </div>
-    </div>
+<div class="row justify-content-center">
+  <div class="col-auto">
+    <table class="table table-striped">
+      <tr>
+        <th>Организация</th>
+        <th>Дата начала экспедиции</th>
+        <th>Руководитель</th>
+        <th>Сеансы записи</th>
+      </tr>
+      {% for exp in object_list %}
+      <tr>
+        <td>{{ exp.organisation_expedition }}</td>
+        <td>{{ exp.begin_data_expedition }}</td>
+        <td>{{ exp.researcher_expedtion }}</td>
+        <td><a href='{% url "seances" exp.pk %}' class="btn btn-secondary">Подробнее</a></td>
+      </tr>
+      {% endfor %}
+    </table>
+  </div>
+</div>
 {% endblock content %}
