--- a/folklore_base/apps/base/templates/seances.html
+++ b/folklore_base/apps/base/templates/seances.html
@@ -5,24 +5,26 @@
 {% endblock %}
 {% block content %}
 <br><h4 class="text-center text-muted" >Сеансы записи экспедиции {{ object.name_organisation }} {{ object.begin_data_expedition }}</h4><hr>
-<div class="container">
-  <div class="row m-1" >
-    {% for seance in object.seanses_of_expedition.all %}
-    <div class="col-sm col-md-3">
-      <div class="card" style="width: 18rem; margin: 4;">
-
-        <div class="card-header">{{ seance.place_of_record }}<br>{{ seance.data_seans_of_record }}</div>
-        <div class="card-body">
-          <b>Информанты:</b>
-          {% for inf in seance.informant_of_seanse.all %}
+<div class="row justify-content-center">
+  <div class="col-auto">
+    <table class="table table-striped">
+      <tr>
+        <th>Место записи</th>
+        <th>Дата записи</th>
+        <th>Информанты</th>
+        <th>Материалы</th>
+      </tr>
+      {% for seance in object.seanses_of_expedition.all %}
+      <tr>
+        <td>{{ seance.place_of_record }}</td>
+        <td>{{ seance.data_seans_of_record }}</td>
+        <td>{% for inf in seance.informant_of_seanse.all %}
           <p class="card-text">{{ inf }}</p>
-          {% endfor %}
-          <a href="{% url 'matherials' seance.id_of_seance_of_record %}" class="btn btn-secondary">Материалы</a>
-        </div>
-      </div>
+          {% endfor %}</td>
+          <td><a href="{% url 'matherials' seance.id_of_seance_of_record %}" class="btn btn-secondary">Подробнее</a></td>
+        </tr>
+        {% endfor %}
+      </table>
     </div>
-    {% endfor %}
   </div>
-</div>
-
-{% endblock content %}
+  {% endblock content %}
