--- a/folklore_base/apps/base/templates/base.html
+++ b/folklore_base/apps/base/templates/base.html
@@ -1,4 +1,7 @@
 <!-- templates/base.html -->
+{% url 'expeditions' as expeditions %}
+{% url 'digital' as digital %}
+{% url 'informants' as informants %}
 {% load static %}
 <html>
 <head>
@@ -9,7 +12,7 @@
   </title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 
 </head>
@@ -18,17 +21,29 @@
   <br>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="{% url 'expeditions' %}">Экспедиции</a>
+      <a class="navbar-brand" href="{% url 'expeditions' %}">Главная</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Записи</a>
+            <a {% if request.path == expeditions %}
+            class="nav-link active" aria-current="page"
+            {% else %} class="nav-link"
+            {% endif %} href="{% url 'expeditions' %}">Экспедиции</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'informants' %}">Исполнители</a>
+            <a {% if request.path == digital %}
+            class="nav-link active" aria-current="page"
+            {% else %} class="nav-link"
+            {% endif %} href="{% url 'digital' %}">Записи</a>
+          </li>
+          <li class="nav-item">
+            <a {% if request.path == informants %}
+            class="nav-link active" aria-current="page"
+            {% else %} class="nav-link"
+            {% endif %} href="{% url 'informants' %}">Исполнители</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Новости</a>
@@ -39,20 +54,21 @@
         </ul>
 
       </div>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Поиск" aria-label="Search">
+
+      {% if digital == request.path or informants == request.path %}
+      <form class="form-inline my-2 my-lg-0" action="{% url 'informants' %}">
+        <input class="form-control mr-sm-2" type="search" placeholder="Поиск" aria-label="Search" name="search">
         <button class="btn btn-outline-light my-2 my-sm-0" type="submit"><span class="bi bi-search"></span></button>
       </form>
+      {% endif %}
     </div>
   </nav>
-
-
-<div class="row">
-<div class="col">
-
+  <div class="row">
+    <div class="col">
       {% block content %}
       {% endblock content %}
-</div>
-</div>
-</body>
-</html>
+    </div>
+    </div
+
+  </body>
+  </html>
