--- a/folklore_base/apps/base/templates/digitalmedia.html
+++ b/folklore_base/apps/base/templates/digitalmedia.html
@@ -7,7 +7,7 @@
 
 
 {% block content %}
-{% for dm in object_list %}
+{% for dm in model %}
 <div class="card" style="margin: 4;">
   <h5 class="card-header">{{ dm.id_of_digitl_media }}</h5>
   <div class="card-body">
@@ -16,6 +16,7 @@
     <p class="card-text">{{ dm.file_description|linebreaks }}</p>
   </div>
 </div>
-
 {% endfor %}
+{% include 'pagination.html' %}
+
 {% endblock content %}
