Добавлен новый медиаплеер

--- a/folklore_base/apps/base/templates/digitalmedia.html
+++ b/folklore_base/apps/base/templates/digitalmedia.html
@@ -12,7 +12,7 @@
   <h5 class="card-header">{{ dm.id_of_digitl_media }}</h5>
   <div class="card-body">
     <h5 class="card-title">{{ dm.seans }}</h5>
-    <p class="card-text"><audio src="{{ dm.fileupl.url }}" controls></audio></p>
+    <p class="card-text"><a  href="{{ dm.fileupl.url }}" class="jouele" data-space-control="true">{{ dm.id_of_digitl_media }}</a></p>
     <p class="card-text">{{ dm.file_description|linebreaks }}</p>
   </div>
 </div>
