--- a/folklore_base/apps/base/templates/base.html
+++ b/folklore_base/apps/base/templates/base.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
   <script src="{% static "js/bootstrap.bundle.min.js" %}""></script>
   <script type="text/javascript" src="{% static "js/jquery.js" %}"></script>
-  <script src="{% static "js/jouele.min.js" %}"></script>
+ <script src="{% static "js/jouele.min.js" %}"></script> 
   <link href="{% static "css/jouele.min.css" %}" rel="stylesheet"/>
   {%block advancedhead%}
   {%endblock%}
@@ -38,8 +38,7 @@
             {% endif %} href="{% url 'expeditions' %}">Экспедиции</a>
           </li>
           <li class="nav-item">
-            <a {% if request.path == digital %}
-            class="nav-link active" aria-current="page"
+            <a {% if request.path == digital %} class="nav-link active" aria-current="page"
             {% else %} class="nav-link"
             {% endif %} href="{% url 'digital' %}">Записи</a>
           </li>
@@ -57,7 +56,7 @@
       {% if digital == request.path or informants == request.path %}
       <form class="d-flex my-2 my-lg-0" action="{{request.path}}">
         <input class="form-control mr-sm-0" type="search" placeholder="Поиск" aria-label="Search" name="search">
-        <button class="btn btn-outline-light my-2 my-sm-0" type="submit"><span class="bi bi-search"></span></button>
+        <button class="btn btn-outline-light my-2 my-sm-0 m-2" type="submit"><span class="bi bi-search"></span></button>
       </form>
       {% endif %}
     </div>
