--- a/folklore_base/apps/base/templates/base.html
+++ b/folklore_base/apps/base/templates/base.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
   <script src="{% static "js/bootstrap.bundle.min.js" %}""></script>
   <script type="text/javascript" src="{% static "js/jquery.js" %}"></script>
- <script src="{% static "js/jouele.min.js" %}"></script> 
+ <script src="{% static "js/jouele.min.js" %}"></script>
   <link href="{% static "css/jouele.min.css" %}" rel="stylesheet"/>
   {%block advancedhead%}
   {%endblock%}
@@ -49,7 +49,7 @@
             {% endif %} href="{% url 'informants' %}">Исполнители</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Новости</a>
+            <a class="nav-link" href="{% url 'admin:index' %}">Админ панель</a>
           </li>
         </ul>
       </div>
