--- a/folklore_base/apps/base/templates/base.html
+++ b/folklore_base/apps/base/templates/base.html
@@ -3,7 +3,9 @@
 {% url 'digital' as digital %}
 {% url 'informants' as informants %}
 {% load static %}
-<html>
+<!DOCTYPE html>
+<html lang="ru" dir="ltr">
+  
 <head>
   <title>
     {% block title %}
@@ -13,7 +15,7 @@
   <meta charset="utf-8">
   <link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}" >
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
-  <script src="{% static "js/bootstrap.bundle.min.js" %}""></script>
+  <script src="{% static "js/bootstrap.bundle.min.js" %}"></script>
   <script type="text/javascript" src="{% static "js/jquery.js" %}"></script>
  <script src="{% static "js/jouele.min.js" %}"></script>
   <link href="{% static "css/jouele.min.css" %}" rel="stylesheet"/>
