--- a/folklore_base/apps/base/templates/expeditions.html
+++ b/folklore_base/apps/base/templates/expeditions.html
@@ -6,8 +6,7 @@
 
 {% block content %}
 <br><h3 class="text-center text-muted">Список экспедиций</h3> <hr>
-<div class="row justify-content-center">
-  <div class="col-auto">
+  <div class="container">
     <table class="table table-striped">
       <tr>
         <th>Организация</th>
@@ -27,7 +26,6 @@
 
   {% include 'pagination.html' %}
   </div>
-</div>
 {{top_patch}}
 
 {% endblock content %}
