--- a/folklore_base/apps/base/templates/inf_details.html
+++ b/folklore_base/apps/base/templates/inf_details.html
@@ -4,14 +4,14 @@
 {% endblock %}
 {% block content %}
 <br>
-<div class="row justify-content-center">
-  <div class="col-auto">
+
+  <div class="container">
 
 
 <table class='table table-bordered  rounded'>
 
 
-<thead class="table-dark">
+<thead class="table-secondary">
   <tr>
     <th scope="col">ФИО</th>
     <th scope="col">Год рождения</th>
@@ -27,7 +27,7 @@
 </tbody>
 </table>
 <table class='table table-bordered  rounded'>
-<thead class="table-dark">
+<thead class="table-secondary">
   <tr>
     <th>Дополнительно</th>
     <th>Фото</th>
@@ -49,6 +49,6 @@
 
 </table>
 </div>
-</div>
+
 
 {% endblock %}
