--- a/folklore_base/apps/base/templates/seances.html
+++ b/folklore_base/apps/base/templates/seances.html
@@ -5,8 +5,7 @@
 {% endblock %}
 {% block content %}
 <br><h4 class="text-center text-muted" >Сеансы записи экспедиции {{ object.name_organisation }} {{ object.begin_data_expedition }}</h4><hr>
-<div class="row justify-content-center">
-  <div class="col-auto">
+  <div class="container">
     <table class="table table-striped">
       <tr>
         <th>Место записи</th>
@@ -26,5 +25,4 @@
         {% endfor %}
       </table>
     </div>
-  </div>
   {% endblock content %}
