--- a/folklore_base/apps/base/templates/inf_details.html
+++ b/folklore_base/apps/base/templates/inf_details.html
@@ -40,7 +40,7 @@
 <tr>
   <td colspan="2">
     {% for s in seances %}
-    {{ s }} <a href="{% url 'matherials' s.id_of_seance_of_record  %}" class="btn btn-secondary">Материалы</a> <br> <hr>
+    {{ s }} <a href="{% url 'digital' s.id_of_seance_of_record  %}" class="btn btn-secondary">Материалы</a> <br> <hr>
     {% endfor %}
   </td>
 </tr>
