--- a/folklore_base/apps/base/templates/index.html
+++ b/folklore_base/apps/base/templates/index.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{%load spec_filters%}
 {% block title %}
 Карта обследованных населенных пунктов
 {% endblock%}
@@ -24,5 +25,6 @@
 <h2 class="text-center text-muted">Карта обследованных населенных пунктов</h2>
 <div class=" row justify-content-center">
   <div id="map" style="width:900px; height:600px"></div>
+
 </div>
 {%endblock%}
