--- a/folklore_base/apps/base/templates/locations.html
+++ b/folklore_base/apps/base/templates/locations.html
@@ -1,16 +1,19 @@
 {% extends 'base.html' %}
-<!-- {%load spec_filters%} -->
+{% load spec_filters%}
 {% block title %}
 Список обследованных населенных пунктов
 {% endblock %}
 {% block content %}
-<!-- {% locate as loc %} -->
 <br>
 <h2 class="text-center text-secondary">Список обследованных населенных пунктов</h2>
 <br>
+<div class="container w-75">
+  <div class="row">
 
-  <table class="table table-bordered w-50 mx-auto">
-    {%for i in loc %}
+<div class="col">
+
+  <table class="table table-bordered">
+    {%for i in model.object_list %}
     <tr><td colspan="2" class="table-secondary"><h4>{{i}}</h4></td></tr>
     <tr>
       {%for r in i.rajon.all%}
@@ -20,5 +23,17 @@
     {%endfor%}
     {%endfor%}
   </table>
+  {%include 'pagination.html'%}
+</div>
+<div class="col-sm text-center">
+{% locate_tag as list%}
+<div class="list-group">
 
+{% for o in list %}
+<a href="{% url 'locate_select' o.id %}" class="list-group-item list-group-item-action">{{o}}</a><br>
+{%endfor%}
+</div>
+</div>
+</div>
+</div>
 {%endblock%}
