--- a/folklore_base/apps/base/templates/digitalmedia.html
+++ b/folklore_base/apps/base/templates/digitalmedia.html
@@ -9,14 +9,53 @@
 <p class="text-center text-muted">Для поиска записи используйте форму ввода в меню
   Поиск работает по полю ID записи</p> <br>
 {% load spec_filters %}
-{{request.path|req_filt}}
 {% reestr_tag request.path|req_filt as reestr %}
-{% for r in reestr %}
-<img src="{{ r.reestr_file.url }}">
-{%endfor%}
+<div class="container">
+  <table class="table table-striped">
+    <tbody>
+    <tr>
+      <td>
+      ID реестра
+      </td>
+      <td>
+      открыть просмотр
+      </td>
+    </tr>
+    </tbody>
 
-    <div class="container">
-      <table class="table table-striped">
+{% for r in reestr %}
+<tr>
+  <td>
+    {{r.id_of_digitl_media}}
+  </td>
+<td>
+
+  <!-- Button trigger modal -->
+  <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#modal{{r.id_of_digitl_media}}">
+    Открыть
+  </button>
+  <!-- Modal -->
+  <div class="modal fade" id="modal{{r.id_of_digitl_media}}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-xl">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">{{r.id_of_digitl_media}}</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <a href="{{r.reestr_file.url}}"><img src="{{ r.reestr_file.url }}" width="1100"></a>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
+        </div>
+      </div>
+    </div>
+  </div>
+      </td>
+</tr>
+  {%endfor%}
+  </table>
+  <table class="table table-striped">
         <thead>
           <tr class="table-secondary">
             <th>Сеанс записи</th>
