--- a/folklore_base/apps/base/templates/digitalmedia.html
+++ b/folklore_base/apps/base/templates/digitalmedia.html
@@ -8,7 +8,7 @@
 <h2 class="text-center text-muted">Аудиозаписи</h2>
 <p class="text-center text-muted">Для поиска записи используйте форму ввода в меню
   Поиск работает по полю ID записи</p> <br>
-{% if request.url %}
+{% if request %}
 {% load spec_filters %}
 {% reestr_tag request.path|req_filt as reestr %}
 <div class="container">
@@ -32,11 +32,11 @@
 <td>
 
   <!-- Button trigger modal -->
-  <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#modal{{r.id_of_digitl_media}}">
+  <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#modal{{r.id_of_digitl_media|clean_id}}">
     Открыть
   </button>
   <!-- Modal -->
-  <div class="modal fade" id="modal{{r.id_of_digitl_media}}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal fade" id="modal{{r.id_of_digitl_media|clean_id}}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-xl">
       <div class="modal-content">
         <div class="modal-header">
