--- a/folklore_base/apps/base/templates/seances.html
+++ b/folklore_base/apps/base/templates/seances.html
@@ -20,7 +20,8 @@
         <td>{% for inf in seance.informant_of_seanse.all %}
           <p class="card-text">{{ inf }}</p>
           {% endfor %}</td>
-          <td><a href="{% url 'digital' seance.id_of_seance_of_record %}" class="btn btn-secondary">Подробнее</a></td>
+          <td><a href="{% url 'digital' seance.id_of_seance_of_record %}" class="btn btn-secondary">Аудио</a>
+          <a href="{% url 'video' seance.id_of_seance_of_record  %}" class="btn btn-secondary">Видео</a></td>
         </tr>
         {% endfor %}
       </table>
