Добавлена страница реестров

--- a/folklore_base/apps/base/templates/jscss.html
+++ b/folklore_base/apps/base/templates/jscss.html
@@ -6,3 +6,4 @@
 <script type="text/javascript" src="{% static "js/jquery.js" %}"></script>
 <script src="{% static "js/jouele.min.js" %}"></script>
 <link href="{% static "css/jouele.min.css" %}" rel="stylesheet"/>
+<link rel="shortcut icon" type="image/png" href="{% static 'ico/favicon.ico' %}"/>
