--- a/folklore_base/apps/base/templates/video.html
+++ b/folklore_base/apps/base/templates/video.html
@@ -4,7 +4,7 @@
 {% endblock %}
 {% block content %}
 
-<table class="table table-striped">
+<table class="table table-striped shadow">
         <thead>
           <tr class="table-secondary">
             <th>Видео</th>
