--- a/folklore_base/apps/base/templates/seances.html
+++ b/folklore_base/apps/base/templates/seances.html
@@ -6,7 +6,7 @@
 {% block content %}
 <br><h4 class="text-center text-muted" >Сеансы записи экспедиции {{ object.name_organisation }} {{ object.begin_data_expedition }}</h4><hr>
   <div class="container">
-    <table class="table table-striped">
+    <table class="table table-striped shadow">
       <tr>
         <th>Место записи</th>
         <th>Дата записи</th>
