--- a/folklore_base/apps/base/templates/video.html
+++ b/folklore_base/apps/base/templates/video.html
@@ -15,7 +15,7 @@
         <tbody>
          {% for v in video_req%}
           <tr>
-            <td><video width="400" height="300" controls="controls" >
+            <td><video width="400" height="300" controls="controls" class="shadow" >
    <source src="{{v.video_file.url}}" >
    Тег video не поддерживается вашим браузером.
   </video></td>
