--- a/folklore_base/apps/base/templates/locations.html
+++ b/folklore_base/apps/base/templates/locations.html
@@ -12,13 +12,13 @@
 
 <div class="col">
 
-  <table class="table table-bordered">
+  <table class="table table-bordered shadow">
     {%for i in model.object_list %}
     <tr><td colspan="2" class="table-secondary"><h4>{{i}}</h4></td></tr>
     <tr>
       {%for r in i.rajon.all%}
       <td class="text-center"><b>{{r}}</b></td>
-      <td class="p-3 text-center">{%for n in r.naspunkt.all %} <li>{{n}}</li> {%endfor%} </td>
+      <td class="p-3 text-center">{%for n in r.naspunkt.all %} <li><a href="{% url 'seanceofgeo' n.id %}"> {{n}}</a></li> {%endfor%} </td>
     </tr>
     {%endfor%}
     {%endfor%}
@@ -30,7 +30,7 @@
 <div class="list-group">
 
 {% for o in list %}
-<a href="{% url 'locate_select' o.id %}" class="list-group-item list-group-item-action">{{o}}</a><br>
+<a href="{% url 'locate_select' o.id %}" class="list-group-item list-group-item-action shadow">{{o}}</a><br>
 {%endfor%}
 </div>
 </div>
