--- a/folklore_base/apps/base/templates/pagination.html
+++ b/folklore_base/apps/base/templates/pagination.html
@@ -1,22 +1,22 @@
 {% if is_paginated %}
 <nav aria-label="...">
   <ul class="pagination justify-content-center">
-    <li class="page-item {% if not prev_url%} disabled {% endif %}">
+    <li class="page-item {% if not prev_url%} disabled {% endif %} shadow">
       <a class="page-link" href="{{ prev_url }}"tabindex="-1">Назад</a>
     </li>
 
 
     {% for n in model.paginator.page_range %}
     {% if explist.number == n %}
-    <li class="page-item active" aria-current="page">
+    <li class="page-item active shadow" aria-current="page">
       <span class="page-link border-dark">{{ n }}</span>
     </li>
     {% elif n > model.number|add:-2 and n < model.number|add:3 %}
 
-    <li class="page-item"><a class="page-link" href="?page={{ n }}">{{ n }}</a></li>
+    <li class="page-item shadow"><a class="page-link" href="?page={{ n }}">{{ n }}</a></li>
     {% endif %}
     {% endfor %}
-    <li class="page-item {% if not next_url%} disabled {% endif %}">
+    <li class="page-item {% if not next_url%} disabled {% endif %} shadow">
       <a class="page-link" href="{{ next_url }}"tabindex="-1">Вперёд</a>
     </li>
   </ul>
