--- a/folklore_base/apps/base/templates/digitalmediadetail.html
+++ b/folklore_base/apps/base/templates/digitalmediadetail.html
@@ -7,7 +7,7 @@
 <br>
 <div class="container">
 
-  <table class="table table-bordered">
+  <table class="table table-bordered shadow">
     <thead>
       <tr class="table-secondary">
         <td>id</td>
@@ -28,7 +28,7 @@
       <tr>
         <td colspan="3" class="table-secondary">
           <a href="{{ object.fileupl.url }}" class="jouele" data-space-control="true">{{ object.id_of_digitl_media }}</a><br>
-          <button type="button" name="button" class="jouele-control btn btn-secondary" data-type="play-pause">play / pause</button>
+          <button type="button" name="button" class="jouele-control btn btn-secondary " data-type="play-pause">play / pause</button>
         </td>
       </tr>
     </tbody>
