--- a/folklore_base/apps/base/templates/index.html
+++ b/folklore_base/apps/base/templates/index.html
@@ -24,7 +24,7 @@
 <br>
 <h2 class="text-center text-muted">Карта обследованных населенных пунктов</h2>
 <div class=" row justify-content-center">
-  <div id="map" style="width:900px; height:600px"></div>
+  <div id="map" style="width:900px; height:600px" class="shadow-lg"></div>
 
 </div>
 {%endblock%}
