--- a/folklore_base/apps/base/templates/locations.html
+++ b/folklore_base/apps/base/templates/locations.html
@@ -18,7 +18,7 @@
     <tr>
       {%for r in i.rajon.all%}
       <td class="text-center"><b>{{r}}</b></td>
-      <td class="p-3 text-center">{%for n in r.naspunkt.all %} <li><a href="{% url 'seanceofgeo' n.id %}"> {{n}}</a></li> {%endfor%} </td>
+      <td class="p-3 text-center">{%for n in r.naspunkt.all %} <li><a href="{% url 'seanceofgeo' n.id %}" class="link-dark"> {{n}}</a></li> {%endfor%} </td>
     </tr>
     {%endfor%}
     {%endfor%}
