Мелкая правка дизайна

--- a/folklore_base/apps/base/templates/base.html
+++ b/folklore_base/apps/base/templates/base.html
@@ -15,7 +15,7 @@
 </head>
 <body>
   <br>
-  <h2 class="text-center">Банк данных экспедиционных записей</h2>
+  <h1 class="text-center display-6">Банк данных экспедиционных записей</h1>
   {%include 'nav.html'%}
   <br>
   <div class="row">
