--- a/folklore_base/apps/base/templates/digitalmedia.html
+++ b/folklore_base/apps/base/templates/digitalmedia.html
@@ -8,8 +8,8 @@
 <h2 class="text-center text-muted">Аудиозаписи</h2>
 <p class="text-center text-muted">Для поиска записи используйте форму ввода в меню
   Поиск работает по полю ID записи</p> <br>
-
-  <table class="table table-striped">
+<div class="container">
+  <table class="table table-striped shadow">
         <thead>
           <tr class="table-secondary">
             <th>Сеанс записи</th>
@@ -31,4 +31,5 @@
       </table>
     </div>
   {% include 'pagination.html' %}
+</div>
 {% endblock content %}
